--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2931,3 +2931,21 @@
 			}
 
 	}
+
+.msg_alert{
+	margin-bottom: 20px;
+	margin-top: 20px;
+	border: 3px solid #cc0000;
+	background-color: #ffcccc;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+.msg_confirm{
+	margin-bottom: 20px;
+	margin-top: 20px;
+	padding: 10px;
+	border: 3px solid #003300;
+	background-color: #53c653;
+	border-radius: 10px;
+}	
