css + valider formulaire

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2953,3 +2953,21 @@
 .margin_left_30{
 	margin-left: 30px;
 }
+
+.g-recaptcha{
+	margin-top: 15px;
+}
+
+input[type=number]{
+/*	display: block;*/
+		margin-top: 5px;
+		border-radius: 0.4em;
+		-webkit-appearance: none;
+		border: solid 1px #ddd;
+		padding: 0.5em 0.75em;
+		line-height: 1.25em;
+}
+
+input[type=number]:focus {
+	box-shadow: 0px 0px 2px 2px #c94663;
+}
