--- a/assets/css/occupation.css
+++ b/assets/css/occupation.css
@@ -1,11 +1,39 @@
 .celluleOccup {
     border: 1px solid black; /* auront une bordure de 1px */
     border-radius: 10px;
-    margin-top:2px;
-    margin-bottom:2px;
+    position : absolute;
+    width: 14.28%;
+}
+
+.days{
+	border: 2px solid blue;
+	width: 100%;
+}
+
+.coloneOccupTitle{
+	border: 1px solid green;
+	width: 14.28%;
+	display: inline-block;
+	margin:2 auto;
 }
 
 .coloneOccup{
-	margin-right:2px;
-	margin-left:2px;
+	border: 1px solid red;
+	width: 14.28%;
+	position : relative;
+	display: inline-block;
+	height:100%;
+   
+}
+
+#tableEdt{
+	border: 2px solid yellow;
+	width: 100%;
+	height:100%;
+}
+
+occupationContent{
+	max-height: 800px
+
+
 }
