--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,9 @@
 		border: 0;
 		font-size: 100%;
 		font: inherit;
+/*
 		vertical-align: baseline;
+*/
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
